# master-explorer

./: .gitignore  README.md  cabal.project  default.nix  development-notes.md
client/: LICENSE  client.cabal
client/app/: Main.hs
client/app/MasterExplorer/Client/: Api.hs  Course.hs  CourseSelections.hs  Elems.hs  Events.hs  Program.hs
client/css/: style.css
client/src/: Main.hs
client/src/MasterExplorer/Client/: Api.hs  App.hs  ColGrid.hs  Content.hs  ContentComponent.hs  Course.hs  CourseGrid.hs  CourseInfo.hs  CourseList.hs  CourseRepository.hs  Elems.hs  EmptyContent.hs  PlanStats.hs  Program.hs  ProgramList.hs  ScheduleApiMenu.hs
client/src/MasterExplorer/Client/Data/: AppState.hs  CourseEvent.hs  CourseStatuses.hs  HoverStatus.hs  SelectStatus.hs
client/src/Reflex/Dom/: Extended.hs
common/: common.cabal
common/src/MasterExplorer/Common/: Api.hs  Client.hs
common/src/MasterExplorer/Common/Class/: FilterItem.hs  HasText.hs  ListItem.hs  Pretty.hs
common/src/MasterExplorer/Common/Data/: Area.hs  Block.hs  Course.hs  CourseCode.hs  CourseContent.hs  CourseName.hs  CoursePart.hs  CoursePartType.hs  CoursePlan.hs  CourseSelection.hs  Credits.hs  Examination.hs  ExaminationPart.hs  ExaminationType.hs  Examinator.hs  Field.hs  Grading.hs  Hours.hs  Importance.hs  Institution.hs  Level.hs  Occasion.hs  Period.hs  Prerequisites.hs  Program.hs  ProgramCode.hs  ProgramSlug.hs  Schedule.hs  Semester.hs  Slot.hs  Specialization.hs  Subject.hs  Url.hs
common/test/MasterExplorer/Common/Data/: CourseSpec.hs  ProgramCodeSpec.hs  ProgramSpec.hs
scraper/: ChangeLog.md  scraper.cabal
scraper/app/: Main.hs
scraper/markup/: examination-tams22.html  examination.html  hours.html  list-course-different-semesters.html  list-course-semigroup.html  list-courses.html  program-6cddd.html  programs.html  semester.html  tata65.html  url.html
scraper/src/CourseScalpel/: Helpers.hs
scraper/src/CourseScalpel/Data/: Area.hs  Block.hs  Course.hs  CourseCode.hs  CourseContent.hs  CourseName.hs  Credits.hs  Examination.hs  ExaminationType.hs  Examinator.hs  Field.hs  Grading.hs  Hours.hs  Importance.hs  Institution.hs  Level.hs  ListCourse.hs  Models.hs  PageCourse.hs  Period.hs  Prerequisites.hs  Program.hs  ProgramCode.hs  ProgramConf.hs  Semester.hs  Slot.hs  Specialization.hs  Subject.hs  Url.hs
scraper/src/CourseScalpel/Web/: CourseScraper.hs  MarkupParser.hs  Parsing.hs  Scrapers.hs
scraper/src/MasterExplorer/Scraper/: Config.hs  Helpers.hs
scraper/src/MasterExplorer/Scraper/Data/: Area.hs  Block.hs  Course.hs  CourseCode.hs  CourseContent.hs  CourseName.hs  Credits.hs  Examination.hs  ExaminationType.hs  Examinator.hs  Field.hs  Grading.hs  Hours.hs  Importance.hs  Institution.hs  Level.hs  ListCourse.hs  Models.hs  Occasion.hs  PageCourse.hs  Period.hs  Prerequisites.hs  Program.hs  ProgramCode.hs  ProgramConf.hs  Semester.hs  Slot.hs  Specialization.hs  Subject.hs  Url.hs  Validation.hs
scraper/src/MasterExplorer/Scraper/Web/: CourseScraper.hs  MarkupParser.hs  Parsing.hs  Scrapers.hs
scraper/test/CourseScalpel/Data/: AreaSpec.hs  CreditsSpec.hs  ExaminationSpec.hs  FieldSpec.hs  GradingSpec.hs  HoursSpec.hs  ImportanceSpec.hs  InstitutionSpec.hs  ProgramSpec.hs  UrlSpec.hs
scraper/test/CourseScalpel/Web/: ScrapersSpec.hs
scraper/test/MasterExplorer/Scraper/Data/: AreaSpec.hs  BlockSpec.hs  CreditsSpec.hs  ExaminationSpec.hs  FieldSpec.hs  GradingSpec.hs  HoursSpec.hs  ImportanceSpec.hs  InstitutionSpec.hs  ProgramSpec.hs  UrlSpec.hs
scraper/test/MasterExplorer/Scraper/Web/: ScrapersSpec.hs
script/: build-app  build-client  build-server  run-client  run-scraper  run-server
server/: server.cabal
server/app/: Main.hs
server/src/MasterExplorer/Server/: App.hs  Config.hs  Db.hs  wtf.hs
server/src/MasterExplorer/Server/Db/: Models.hs
