name:                client
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Sebastian Callh
maintainer:          sebastian.callhgmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable client
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  RecordWildCards
                     , OverloadedStrings
  build-depends:       base
                     , common
                     , reflex-dom
                     , servant
                     , servant-reflex
                     , text
                     , jsaddle
                     , jsaddle-warp
  hs-source-dirs:      src
  default-language:    Haskell2010
