name:                client
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Sebastian Callh
maintainer:          sebastian.callhgmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable client
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  RecordWildCards
                     , OverloadedStrings
                     , ScopedTypeVariables
  build-depends:       base
                     , common
                     , reflex == 0.5
                     , reflex-dom == 0.4
                     , reflex-dom-core
                     , servant
                     , servant-reflex
                     , containers
                     , text
                     , jsaddle-warp
                     , turtle
                     , fsnotify
                     , containers
  default-language:    Haskell2010
