name:                client
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Sebastian Callh
maintainer:          sebastian.callhgmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable client
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , ScopedTypeVariables
                     , LambdaCase
  build-depends:       base
                     , common
                     , containers
                     , file-embed
                     , jsaddle-warp
                     , lens
                     , reflex == 0.5
                     , reflex-dom == 0.4
                     , reflex-dom-core
                     , servant
                     , servant-reflex
                     , split
                     , text
  default-language:    Haskell2010
