name:                common
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Sebastian Callh
maintainer:          sebastian.callh@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -O2
  default-extensions:  RecordWildCards
                     , OverloadedStrings
  exposed-modules:     MasterExplorer.Common.Api
                     , MasterExplorer.Common.Client
                     , MasterExplorer.Common.Class.FilterItem
                     , MasterExplorer.Common.Class.ListItem
                     , MasterExplorer.Common.Class.Pretty
                     , MasterExplorer.Common.Class.HasText
                     , MasterExplorer.Common.Data.Course
                     , MasterExplorer.Common.Data.Area
                     , MasterExplorer.Common.Data.Level
                     , MasterExplorer.Common.Data.Importance
                     , MasterExplorer.Common.Data.Slot
                     , MasterExplorer.Common.Data.Subject
                     , MasterExplorer.Common.Data.Block
                     , MasterExplorer.Common.Data.CourseCode
                     , MasterExplorer.Common.Data.CourseContent
                     , MasterExplorer.Common.Data.CourseName
                     , MasterExplorer.Common.Data.CoursePart
                     , MasterExplorer.Common.Data.CoursePartType
                     , MasterExplorer.Common.Data.Examination
                     , MasterExplorer.Common.Data.ExaminationPart
                     , MasterExplorer.Common.Data.ExaminationType
                     , MasterExplorer.Common.Data.Examinator
                     , MasterExplorer.Common.Data.Field
                     , MasterExplorer.Common.Data.Grading
                     , MasterExplorer.Common.Data.Hours
                     , MasterExplorer.Common.Data.Credits
                     , MasterExplorer.Common.Data.Institution
                     , MasterExplorer.Common.Data.Occasion
                     , MasterExplorer.Common.Data.Period
                     , MasterExplorer.Common.Data.Program
                     , MasterExplorer.Common.Data.ProgramCode
                     , MasterExplorer.Common.Data.ProgramSlug
                     , MasterExplorer.Common.Data.Prerequisites
                     , MasterExplorer.Common.Data.Semester
                     , MasterExplorer.Common.Data.Specialization
                     , MasterExplorer.Common.Data.Url
  build-depends:       base >=4.9 && <4.11
                     , aeson
                     , base >=4.7 && <5
                     , containers
                     , http-client
                     , servant
                     , servant-client
                     , servant-server
                     , text
                     -- Dante wont work without test deps here
                     , hspec 
                     , QuickCheck
                     , quickcheck-arbitrary-adt
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite common-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:     MasterExplorer.Common.Data.CourseSpec
                     , MasterExplorer.Common.Data.ProgramCodeSpec
                     , MasterExplorer.Common.Data.ProgramSpec

  build-depends:       base
                     , common
                     , hspec
                     , QuickCheck
                     , quickcheck-arbitrary-adt
                     , text
                     , servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  