name:                scraper
version:             0.1.0.0
-- synopsis:            
description:         Application for scraping courses from liu.se/studieinfo.
license:             BSD3
license-file:        LICENSE
author:              Sebastian Callh
maintainer:          sebastian.callh@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable scraper
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.7 && <5
                     , scraper
                     , common
                     , mtl
                     , scalpel
                     , text
                     , containers
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-extensions:  RecordWildCards
                     , OverloadedStrings
                     , LambdaCase
  build-depends:       base >=4.7 && <5
                     , common
                     , HUnit
                     , QuickCheck
                     , containers
                     , either
                     , hlint
                     , hspec
                     , megaparsec == 6.3.0
                     , mtl
                     , parser-combinators
                     , safe
                     , scalpel
                     , text
  exposed-modules:     CourseScalpel.Helpers
                     , CourseScalpel.Web.Parsing
                     , CourseScalpel.Web.Scrapers
                     , CourseScalpel.Data.Area
                     , CourseScalpel.Data.Block
                     , CourseScalpel.Data.Credits
                     , CourseScalpel.Data.Course
                     , CourseScalpel.Data.CourseCode
                     , CourseScalpel.Data.CourseContent
                     , CourseScalpel.Data.Examination
                     , CourseScalpel.Data.ExaminationType
                     , CourseScalpel.Data.Field
                     , CourseScalpel.Data.Grading
                     , CourseScalpel.Data.Hours
                     , CourseScalpel.Data.Importance
                     , CourseScalpel.Data.Institution
                     , CourseScalpel.Data.ListCourse
                     , CourseScalpel.Data.PageCourse
                     , CourseScalpel.Data.Program
                     , CourseScalpel.Data.Prerequisites
                     , CourseScalpel.Data.Level
                     , CourseScalpel.Data.Models
                     , CourseScalpel.Data.Period
                     , CourseScalpel.Data.ProgramCode
                     , CourseScalpel.Data.ProgramConf
                     , CourseScalpel.Data.Semester
                     , CourseScalpel.Data.Slot
                     , CourseScalpel.Data.Subject
                     , CourseScalpel.Data.Specialization
                     , CourseScalpel.Data.Url
  default-language:    Haskell2010

test-suite scraper-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  default-extensions: OverloadedStrings RecordWildCards LambdaCase
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:  HUnit
                , QuickCheck
                , base
                , scraper
                , hspec
                , scalpel
                , text
  other-modules:  CourseScalpel.Data.AreaSpec
                , CourseScalpel.Data.CreditsSpec
                , CourseScalpel.Data.ExaminationSpec
                , CourseScalpel.Data.FieldSpec
                , CourseScalpel.Data.GradingSpec
                , CourseScalpel.Data.HoursSpec
                , CourseScalpel.Data.ImportanceSpec
                , CourseScalpel.Data.InstitutionSpec
                , CourseScalpel.Data.ProgramSpec
                , CourseScalpel.Data.UrlSpec
                , CourseScalpel.Web.ScrapersSpec
  default-language: Haskell2010
