name:                scraper
version:             0.1.0.0
-- synopsis:            
description:         Application for scraping courses from liu.se/studieinfo.
license:             BSD3
license-file:        LICENSE
author:              Sebastian Callh
maintainer:          sebastian.callh@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable scraper
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.7 && <5
                     , scraper
                     , common
                     , mtl
                     , scalpel
                     , text
                     , containers
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-extensions:  RecordWildCards
                     , OverloadedStrings
                     , LambdaCase
  build-depends:       base >=4.7 && <5
                     , HUnit
                     , QuickCheck
                     , common
                     , containers
                     , either
                     , hlint
                     , hspec
                     , megaparsec == 6.3.0
                     , monad-logger 
                     , mtl
                     , parser-combinators
                     , safe
                     , scalpel
                     , text
  exposed-modules:     MasterExplorer.Scraper.Config
                     , MasterExplorer.Scraper.Helpers
                     , MasterExplorer.Scraper.Data.Area
                     , MasterExplorer.Scraper.Data.Block
                     , MasterExplorer.Scraper.Data.Course
                     , MasterExplorer.Scraper.Data.CourseCode
                     , MasterExplorer.Scraper.Data.CourseContent
                     , MasterExplorer.Scraper.Data.CourseName
                     , MasterExplorer.Scraper.Data.Credits
                     , MasterExplorer.Scraper.Data.Examination
                     , MasterExplorer.Scraper.Data.ExaminationType
                     , MasterExplorer.Scraper.Data.Field
                     , MasterExplorer.Scraper.Data.Grading
                     , MasterExplorer.Scraper.Data.Hours
                     , MasterExplorer.Scraper.Data.Importance
                     , MasterExplorer.Scraper.Data.Institution
                     , MasterExplorer.Scraper.Data.Level
                     , MasterExplorer.Scraper.Data.ListCourse
                     , MasterExplorer.Scraper.Data.Occasion
                     , MasterExplorer.Scraper.Data.PageCourse
                     , MasterExplorer.Scraper.Data.Period
                     , MasterExplorer.Scraper.Data.Prerequisites
                     , MasterExplorer.Scraper.Data.Program
                     , MasterExplorer.Scraper.Data.ProgramCode
                     , MasterExplorer.Scraper.Data.ProgramConf
                     , MasterExplorer.Scraper.Data.Semester
                     , MasterExplorer.Scraper.Data.Slot
                     , MasterExplorer.Scraper.Data.Specialization
                     , MasterExplorer.Scraper.Data.Subject
                     , MasterExplorer.Scraper.Data.Url
                     , MasterExplorer.Scraper.Web.Parsing
                     , MasterExplorer.Scraper.Web.Scrapers
  default-language:    Haskell2010

test-suite scraper-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  default-extensions: OverloadedStrings RecordWildCards LambdaCase
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:  HUnit
                , QuickCheck
                , base
                , scraper
                , hspec
                , scalpel
                , text
  other-modules:  MasterExplorer.Scraper.Data.AreaSpec
                , MasterExplorer.Scraper.Data.CreditsSpec
                , MasterExplorer.Scraper.Data.ExaminationSpec
                , MasterExplorer.Scraper.Data.FieldSpec
                , MasterExplorer.Scraper.Data.GradingSpec
                , MasterExplorer.Scraper.Data.HoursSpec
                , MasterExplorer.Scraper.Data.ImportanceSpec
                , MasterExplorer.Scraper.Data.InstitutionSpec
                , MasterExplorer.Scraper.Data.ProgramSpec
                , MasterExplorer.Scraper.Data.UrlSpec
                , MasterExplorer.Scraper.Web.ScrapersSpec
  default-language: Haskell2010
